# glixy_labs_1

./: .gitignore  LICENSE  README.md
.github/workflows/: release-aether.yml
aether/: .dockerignore  Dockerfile  LICENSE  README.md  aether-launcher.py  build-windows.ps1  install.ps1  installer.iss  pyproject.toml  start.bat  start.sh
aether/aether/: __init__.py  agents.py  cli.py  config.py  main.py  memory.py  models.py
aether/aether/tools/: __init__.py  code.py  files.py  memory_tool.py  shell.py  web.py
aether/aether/web/: app.css  app.js  index.html  welcome.js
features-app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
features-app/src/: App.jsx  index.css
features-app/src/animations/: variants.js
features-app/src/components/: Button.jsx  Character.jsx  DockIcon.jsx  FloatingAvatar.jsx  FloatingParticles.jsx  Loader.jsx  Navbar.jsx
features-app/src/sections/: CTA.jsx  Features.jsx  Footer.jsx  Hero.jsx
swarm-app/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
swarm-app/assets/: _make_icon.py
swarm-app/src/: App.jsx  index.css
swarm-app/src-tauri/: Cargo.toml  tauri.conf.json
swarm-app/src-tauri/capabilities/: default.json
swarm-app/src-tauri/icons/: README.md  icon.icns
swarm-app/src-tauri/src/: agents.rs  lib.rs  main.rs  runner.rs  store.rs
swarm-app/src/components/: AgentList.jsx  RunView.jsx  SettingsView.jsx  Sidebar.jsx
swarm-app/src/lib/: bridge.js
swarm-site/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
swarm-site/src/: App.jsx  index.css
swarm-site/src/animations/: variants.js
swarm-site/src/components/: Button.jsx  CodeBlock.jsx  FloatingParticles.jsx  GitHubBadge.jsx  Loader.jsx  Navbar.jsx  StatTile.jsx  SwarmGraph.jsx
swarm-site/src/sections/: CTA.jsx  Docs.jsx  Download.jsx  Features.jsx  Footer.jsx  Hero.jsx  Setup.jsx  Workflows.jsx
