[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glixy-aether"
version = "0.4.2"
description = "Open-source AI assistant + multi-agent runtime"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Glixy Labs" }]
keywords = ["ai", "agents", "assistant", "llm", "ollama", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
]

[project.scripts]
aether = "aether.cli:main"

[project.urls]
Homepage = "https://glixylabs.com/product-aether.html"
Repository = "https://github.com/glixylabs/aether"
Issues = "https://github.com/glixylabs/aether/issues"

[tool.setuptools.packages.find]
include = ["aether*"]

[tool.setuptools.package-data]
"aether" = ["web/**/*"]
