[package]
name = "glixyswarm"
version = "0.1.0"
description = "Glixyswarm — multi-agent orchestration desktop app"
authors = ["Glixy Labs"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "glixyswarm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri               = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell  = "2.0"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
reqwest    = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
rusqlite   = { version = "0.32", features = ["bundled"] }
directories = "5"
uuid       = { version = "1", features = ["v4"] }
anyhow     = "1"
futures    = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
